--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,6 +33,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 
 .keyboard {
@@ -45,11 +46,33 @@ body {
 }
 
 .inner-board {
-  border: 1px solid blue;
+  border: 0px solid blue;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   width: 55%;
-  height: 70%;
+  height: 75%;
+}
+
+.row {
+  border: 0px solid red;
+  width: 100%;
+  height: 20%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 0.1%;
+}
+
+.charInput {
+  color: black;
+  width: 10%;
+  border-radius: 1.5%;
+  margin-right: 0.125%;
+  margin-left: 0.125%;
+  height: 95%;
+  border: 0px solid green;
+  text-align: center;
 }
