--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -92,11 +92,16 @@ body {
   border: none;
   padding: 0.5rem;
   cursor: pointer;
-  margin-top: 0.55%;
+  margin-top: 1%;
+  border-radius: 5%;
 }
 
 .winner-message {
   color: green;
   font-size: 2rem;
   position: absolute;
+}
+
+.invalidAlert {
+  top: 22vh;
 }
